<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">The Running Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="header">Welcome</string>
    <string name="button_one">Calculate Pace and Spilts</string>
    <string name="button_two">Convert Distance</string>
    <string name="button_three">Multi Event Calculator</string>
    <string name="button_four">About</string>
    <string name="title_activity_split_calculator">Split Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_distance_converter">Distance Converter</string>
    <string name="title_activity_preformance_converter">Multi-Event Calculator</string>
    <string name="distance_header">Convert Distance</string>
    <string name="preformance_header">Calculate Points for an event</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="calculate">Calculate</string>
    <string name="total_distance">Total Distance</string>
    <string-array name="distance_array">
        <item >Miles</item>
        <item >Kilometers</item>
        <item >Marathon</item>
        <item >Meters</item>
        <item >Yards</item>
        <item >Feet</item>
        <item >Nautical Miles</item>
    </string-array>
    <string name="distance_prompt">Miles</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="time">Split Time</string>
    <string name="split_header">Split Distance</string>
    <string name="output">OUTPUT</string>
    <string name="convert_to">Convert To</string>
    <string name="preformance_prompt">Select Event</string>
    <string-array name="preformance_array_men">
        <item >100m</item>
        <item >110m H</item>
        <item >200m</item>
        <item >300m</item>
        <item >400m</item>
        <item >400m H</item>
        <item >4x100m</item>
        <item >4x200m</item>
        <item >4x400m</item>
        <item >600m</item>
        <item >800m</item>
        <item >1000m</item>
        <item >1500m</item>
        <item >Mile</item>
        <item >2000m</item>
        <item >2000m SC</item>
        <item >3000m</item>
        <item >3000m SC</item>
        <item >2 Miles</item>
        <item >5000m</item>
        <item >10000m</item>
        <item >10 km (Road)</item>
        <item >15 km</item>
        <item >10 Miles</item>
        <item >20 km</item>
        <item >Half Marathon</item>
        <item >25km</item>
        <item >30km</item>
        <item >Marathon</item>
        <item >100km</item>
        <item >3km RW</item>
        <item >5km RW</item>
        <item >10km RW</item>
        <item >20km RW</item>
        <item >30km RW</item>
        <item >35km RW</item>
        <item >50km RW</item>
        <item >High Jump</item>
        <item >Pole Vault</item>
        <item >Long Jump</item>
        <item >Triple Jump</item>
        <item >Shot Put</item>
        <item >Discus</item>
        <item >Hammer</item>
        <item >Javelin</item>
        <item >Decathlon</item>
    </string-array>
    <string-array name="preformance_array_women">
        <item >100m</item>
        <item >100m H</item>
        <item >200m</item>
        <item >300m</item>
        <item >400m</item>
        <item >400m H</item>
        <item >4x100m</item>
        <item >4x200m</item>
        <item >4x400m</item>
        <item >600m</item>
        <item >800m</item>
        <item >1000m</item>
        <item >1500m</item>
        <item >Mile</item>
        <item >2000m</item>
        <item >2000m SC</item>
        <item >3000m</item>
        <item >3000m SC</item>
        <item >2 Miles</item>
        <item >5000m</item>
        <item >10000m</item>
        <item >10 km (Road)</item>
        <item >15 km</item>
        <item >10 Miles</item>
        <item >20 km</item>
        <item >Half Marathon</item>
        <item >25km</item>
        <item >30km</item>
        <item >Marathon</item>
        <item >100km</item>
        <item >3km RW</item>
        <item >5km RW</item>
        <item >10km RW</item>
        <item >20km RW</item>
        <item >30km RW</item>
        <item >35km RW</item>
        <item >50km RW</item>
        <item >High Jump</item>
        <item >Pole Vault</item>
        <item >Long Jump</item>
        <item >Triple Jump</item>
        <item >Shot Put</item>
        <item >Discus</item>
        <item >Hammer</item>
        <item >Javelin</item>
        <item >Heptathlon</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="convert">Calculate Points</string>
    <string name="convert_button">Calculate</string>
    <string name="hint">Enter Preformance</string>
    <string name="quality">0</string>
    <string name="output_hint">000</string>
    <string name="zero">0</string>
    <string name="zero_point">0.0</string>
    <string name="zero_two">00</string>
    <string name="help">Help</string>
    <string-array name="multi_array_men">
        <item >100m</item>
        <item >400m</item>
        <item >1500m</item>
        <item >110m H</item>
        <item >Long Jump</item>
        <item >High Jump</item>
        <item >Pole Vault</item>
        <item >Shot Put</item>
        <item >Discus</item>
        <item >Javelin</item>
        <item >60m</item>
        <item >1000m</item>
        <item >60m H</item>
    </string-array>
    <string-array name="multi_array_women">
        <item >200m</item>
        <item >800m</item>
        <item >100m H</item>
        <item >Long Jump</item>
        <item >High Jump</item>
        <item >Shot Put</item>
        <item >Javelin</item>
        <item >60m H</item>
    </string-array>

</resources>
