<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreformanceConverter" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/preformance_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    
	<ToggleButton
        android:id="@+id/switch1"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/gender"
        android:textOff="@string/male"
        android:textOn="@string/female"
        android:onClick="onToggleOneClicked" />

	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="150dip"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/switch1"
	    android:layout_toRightOf="@+id/switch1"
	    android:ems="10"
	    android:hint="@string/hint"
	    android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/editText1"
	    android:layout_toRightOf="@+id/editText1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:text="@string/convert"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/quality"
        android:src="@drawable/polevault" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:onClick="startHelp"
        android:text="@string/help" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:onClick="calculatePoints"
        android:text="@string/convert_button" />

    <TextView
        android:id="@+id/output_text"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentRight="true"
        android:text="@string/output_hint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
